--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,8 +1,9 @@
 @import "compass";
 
 @import "custom/color";
-@import "custom/layout";
 
 @import "base";
 @import "parts";
 @import "plugins";
+
+@import "custom/styles";
