--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,5 @@
 <ul class="main">
-	<li><a href="{{ root_url }}/blog">Blog</a></li>
+	<li><a href="{{ root_url }}/blog">Artigos</a></li>
+  <li><a href="https://www.youtube.com/user/CasalPartiu">Vídeos</a></li>
 	<li><a href="http://casalpartiu.com">English</a></li>
 </ul>
