Adicionei email de contato

--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -2,3 +2,4 @@
 <p>
 Construído com <a href="http://octopress.org">Octopress</a>, usando o tema <a href="http://zespia.tw/Octopress-Theme-Slash/index.html">Slash</a> de <a href="https://github.com/tommy351">SkyArrow</a>. Hospedado no <a href="http://pages.github.com/">Github</a>. Fique à vontade para fazer um <a href="https://github.com/viniciusteles/casalpartiucombr">fork</a>.
 </p>
+<p>Quer entrar em contato? Nosso email é <a href="mailto:contato@casalpartiu.com.br">contato@casalpartiu.com.br</a>.
