--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -2,13 +2,42 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>{% if page.title %}{{ page.title | strip_html }} - {% endif %}{{ site.title }}</title>
+	{% capture title %}
+    {% if page.title %}
+      {{ page.title | strip_html }} - 
+    {% endif %}
+    {{ site.title }}
+	{% endcapture %}
+	<title>{{ title }}</title>
 	<meta name="author" content="{{ site.author }}">
   <a href="https://plus.google.com/104662451283465127832?rel=author"/>
-	{% capture description %}{% if page.description %}{{ page.description }}{% else %}{{ content | raw_content }}{% endif %}{% endcapture %}
-	<meta name="description" content="{{ description | strip_html | condense_spaces | truncate:150 }}">
+	{% capture page_description %}
+  	{% if page.description %}
+    	{{ page.description }}
+  	{% else %}
+    	{{ content | raw_content }}
+  	{% endif %}
+	{% endcapture %}
+	{% capture description %}
+	  {{ page_description | strip_html | condense_spaces | truncate:150 }}
+	{% endcapture %}
+	<meta name="description" content="{{ description }}">
 	{% if page.keywords %}<meta name="keywords" content="{{ page.keywords }}">{% endif %}
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+  <meta content='pt-BR' http-equiv='content-Language' />
+  <meta property="og:site_name" content="Blog do Be on the Net"/>
+  <meta property="og:title" content="{{ title }}"/>
+  <meta property="og:description" content="{{ description }}"/>
+  {% if page.thumbnail %}
+  <meta property="og:image" content="{{ page.thumbnail }}">
+  {% endif %}
+
+  {% if page.permalink %}
+  <meta property="og:url" content="http://blog.beonthe.net{{ page.permalink }}"/>
+  {% endif %}
+  
+  <meta property="og:type" content="website"/>
 
 	<link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
 	<link rel="canonical" href="{{ canonical }}">
