Fixing FB properties

--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -29,12 +29,13 @@
   <meta property="og:site_name" content="Blog do Be on the Net"/>
   <meta property="og:title" content="{{ title }}"/>
   <meta property="og:description" content="{{ description }}"/>
+  <meta property="og:type" content="website"/>
   {% if page.thumbnail %}
   <meta property="og:image" content="{{ page.thumbnail }}">
   {% endif %}
 
   {% if page.permalink %}
-  <meta property="og:url" content="http://blog.beonthe.net{{ page.permalink }}"/>
+  <meta property="og:url" content="http://casalpartiu.com.br{{ page.permalink }}/"/>
   {% endif %}
   
   <meta property="og:type" content="website"/>
