--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -4,11 +4,10 @@
 	<meta charset="utf-8">
 	{% capture title %}
     {% if page.title %}
-      {{ page.title | strip_html }} - 
+      {{ page.title | strip_html }}
     {% endif %}
-    {{ site.title }}
 	{% endcapture %}
-	<title>{{ title }}</title>
+	<title>{{ title }} - {{ site.title }}</title>
 	<meta name="author" content="{{ site.author }}">
   <a href="https://plus.google.com/104662451283465127832?rel=author"/>
 	{% capture page_description %}
@@ -27,16 +26,16 @@
 
   <meta content='pt-BR' http-equiv='content-Language' />
   <meta property="og:site_name" content="Blog do Be on the Net"/>
+  {% if page.permalink %}
+  <meta property="og:url" content="http://casalpartiu.com.br{{ page.permalink }}/"/>
+  {% endif %}
   <meta property="og:title" content="{{ title }}"/>
-  <meta property="og:description" content="{{ description }}"/>
   <meta property="og:type" content="website"/>
   {% if page.thumbnail %}
   <meta property="og:image" content="{{ page.thumbnail }}">
   {% endif %}
+  <meta property="og:description" content="{{ description }}"/>
 
-  {% if page.permalink %}
-  <meta property="og:url" content="http://casalpartiu.com.br{{ page.permalink }}/"/>
-  {% endif %}
   
   <meta property="og:type" content="website"/>
 
