Algumas correções nos metadados

--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -23,9 +23,9 @@
 	<meta name="description" content="{{ description }}">
 	{% if page.keywords %}<meta name="keywords" content="{{ page.keywords }}">{% endif %}
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
   <meta content='pt-BR' http-equiv='content-Language' />
-  <meta property="og:site_name" content="Blog do Be on the Net"/>
+
+  <meta property="og:site_name" content="Casal Partiu"/>
   {% if page.permalink %}
   <meta property="og:url" content="http://casalpartiu.com.br{{ page.permalink }}/"/>
   {% endif %}
@@ -35,9 +35,6 @@
   <meta property="og:image" content="{{ page.thumbnail }}">
   {% endif %}
   <meta property="og:description" content="{{ description }}"/>
-
-  
-  <meta property="og:type" content="website"/>
 
 	<link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
 	<link rel="canonical" href="{{ canonical }}">
